# OpenCloning_backend

./: .dockerignore  .env.serve-frontend  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  TN9W63_4_pREX0010.ab1  TODO  TODO.md  ase1_cerevisiae.fasta  cloning_strategy.json  codecov.yml  dependabot.yaml  docker_entrypoint.sh  domestication_protocol_response.html  domestication_response.html  dummy.py  dummy.txt  gb_file.gbk  gbraid_synth.py  my_test.py  pREX0008_rc.gb  pombe_all.sh  pyproject.toml  restart_db.sh
.github/ISSUE_TEMPLATE/: new-source.md
.github/workflows/: ci.yml  post_release.yml
docker/: docker-compose.dev.yml  opencloning.Dockerfile
docs/: proxy.md
docs/notebooks/: external_sequences.ipynb
dummy/: Dockerfile
edge_case/: NC_000913.gb  dummy.py  rph_homology_arm.gb
examples/scripting/: GibsonAssembly.ipynb  README.md  example.ipynb  final_strategy.json  first_strategy.json  second_strategy.json
scripts/: check_httpx_imports.py  check_primer3_imports.py  update_catalogs.py
src/opencloning/: addgene_api.py  api_config_utils.py  app_settings.py  assembly2.py  code_generator.py  dna_functions.py  dna_utils.py  httpClient.py  http_client.py  main.py  ncbi_requests.py  primer_design.py  pydantic_models.py  temp_functions.py
stubs/db/: download_sequencing_file.json  get_cloning_strategy.json  get_primer.json  get_primers.json  (+15 more)
tests/: test_api_common.py  test_app_settings.py  test_assembly.py  test_bug_fixing.py  test_cre_lox.py  test_dna_functions.py  test_dna_utils.py  test_dummy.py  test_endpoints_annotation.py  test_endpoints_assembly.py  test_endpoints_batch_cloning.py  test_endpoints_external_import.py  test_endpoints_no_assembly.py  test_endpoints_no_input.py  test_endpoints_other.py  test_endpoints_primer_design.py  test_gateway.py  test_http_client.py  test_ncbi_requests.py  test_primer_design.py  test_pydantic_models.py  test_stub_route.py  test_syntax.py
(+40 files in other folders)
