[project]
name = "opencloning-workspace"
version = "0.0.0"
requires-python = ">=3.11,<4"
dependencies = ["opencloning"]

[tool.uv]
package = false
default-groups = ["dev", "test", "ipython"]

[tool.uv.sources]
opencloning = { workspace = true }

[tool.uv.workspace]
members = ["packages/opencloning"]

[dependency-groups]
dev = [
    "autopep8>=2.0.4",
    "flake8-bugbear>=24.2.6",
    "black>=24.2.0",
    "pre-commit>=3.6.2",
    "watchfiles>=0.21.0",
    "nbstripout>=0.8.1",
    "flake8>=7.0.0",
]
test = [
    "pytest==8.3.4",
    "pytest-cov>=4.1.0",
    "pytest-rerunfailures>=14.0",
    "respx>=0.22.0",
]
ipython = [
    "ipython>=8.20.0",
    "ipykernel>=6.28.0",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.black]
skip-string-normalization = true
line-length = 119
